--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -62,6 +62,18 @@ section h2 {
   line-height: 2rem;
 }
 
+
+
+/*.inbox{
+  background-color: #000;
+  columns: #fff;
+  text-align: center;
+}
+*/
+
+
+
+
 @media (min-width: 992px) {
   section h2 {
     font-size: 3rem;
@@ -347,7 +359,7 @@ a:focus, a:hover, a:active {
 
 .bg-primary {
   /*background-color: #18BC9C !important;*/
-  background: url(../img/cover1.jpg)no-repeat center fixed;
+  background: url(../img/cover2.jpeg)no-repeat center fixed;
   background-size: cover; 
 }
 .bg-primary1 {
