--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -368,7 +368,7 @@ a:focus, a:hover, a:active {
 }
 
 .bg-primary {
-  background-color: #E50914 !important;
+  background-color: #E50914;
   background: url(../img/cover3.jpg)no-repeat center ;
   background-size: cover; 
 }
